# easy_py_messaging

./: .gitignore  CHANGE_LOG  MANIFEST.in  Makefile  README.md  apiLoggerInit.py  backup.sh  demoSocket.py  dirClient.py  logCollector.py  logFilterApp.py  loggingLoopApp.py  runTests.sh  server_create_test.py  setup.cfg  setup.py  wc.sh  whereIsImport.py
data/: bad2.conf
easy_py_messaging/: .coveragerc  CHANGE_LOG  README.md  apiLoggerInit.py  client_create_basic.py  client_create_class.py  client_create_nano.py  client_create_skeleton.py  client_create_test.py  client_sync.py  demoSocket.py  dirClient.py  dirSvc.data  dirSvc.py  listening  listeningPort.py  logCmd.py  logCollector.py  logConfig.py  logFilterApp.py  loggingLoopApp.py  loggingSpeedTest.py  receiver.py  runTests.sh  send_recv_task.py  sender.py  server_create_basic.py  server_create_class.py  server_create_nano.py  server_create_test.py  server_sync.py  setup.cfg  utils.py  wc.sh
easy_py_messaging/data/: happy.conf
easy_py_messaging/docs/: blog.html  eashMessagingBlog.odg  easyMessaging.html  easyMessagingBlog.html  easyMessagingBlog.odg  easyMessagingTutorial.html  easy_log_messaging.html  easy_py_messaging.html  examples_messaging.html  logCollector.html  name.txt  trivialApp.md
easy_py_messaging/docs/css/: article.css
easy_py_messaging/docs/images/: AsyncClientServerPattern.odg  AsyncClientServerPattern.xpm  FireAndForget.odg  RequestWithReply.odg  client_server_basic.odg
easy_py_messaging/examples/: receiver_reliable.py  sender_reliable.py
easy_py_messaging/test/: testLogging.py
(+152 files in other folders)
