[bdist_wheel]
# This flag determines if the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
# This package is not known to work on python 3. Perhaps it does...?
universal=0

[metadata]
description-file = README.md

[bdist_rpm]
doc_files = README.md
            COPYING
            COPYING.LESSER
            docs/

[build]
executable = /usr/bin/env python

